[gd_scene load_steps=9 format=3 uid="uid://qu5u4m4m2ecw"]

[ext_resource type="Script" path="res://Controller.gd" id="1_bv3x3"]
[ext_resource type="Texture2D" uid="uid://1erofu3bejrv" path="res://background-starfield-generator.png" id="2_scvfm"]
[ext_resource type="Texture2D" uid="uid://487t81sirhwe" path="res://background-starfield-generator_1.png" id="2_v1yli"]
[ext_resource type="Texture2D" uid="uid://cxjio4vrqymom" path="res://background-starfield-generator_2.png" id="3_kjhhp"]
[ext_resource type="Script" path="res://spaceship_indicator.gd" id="5_28ovd"]
[ext_resource type="Texture2D" uid="uid://boo612gbwalum" path="res://spaceship.png" id="5_bcegc"]
[ext_resource type="Texture2D" uid="uid://dvdqj8r1jo8h8" path="res://thruster_indicator.png" id="6_iqjed"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q4hlg"]
size = Vector2(64, 24)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_bv3x3")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(544, 278)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1920, 1080)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(640, 360)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_scvfm")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(1920, 1080)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(640, 360)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_v1yli")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1920, 1080)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(640, 360)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_kjhhp")

[node name="Spaceship" type="RigidBody2D" parent="."]
position = Vector2(544, 278)
mass = 5.0

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Spaceship"]
remote_path = NodePath("../../Camera2D")

[node name="Collision" type="CollisionShape2D" parent="Spaceship"]
shape = SubResource("RectangleShape2D_q4hlg")

[node name="Sprite2D" type="Sprite2D" parent="Spaceship"]
texture = ExtResource("5_bcegc")

[node name="ThrusterIndicator0" type="Sprite2D" parent="Spaceship"]
visible = false
position = Vector2(32, -16)
rotation = -1.5708
texture = ExtResource("6_iqjed")

[node name="ThrusterIndicator1" type="Sprite2D" parent="Spaceship"]
visible = false
position = Vector2(36, -12)
texture = ExtResource("6_iqjed")

[node name="ThrusterIndicator2" type="Sprite2D" parent="Spaceship"]
visible = false
position = Vector2(36, 12)
texture = ExtResource("6_iqjed")

[node name="ThrusterIndicator3" type="Sprite2D" parent="Spaceship"]
visible = false
position = Vector2(32, 16)
rotation = 1.5708
texture = ExtResource("6_iqjed")

[node name="ThrusterIndicator4" type="Sprite2D" parent="Spaceship"]
visible = false
position = Vector2(-32, 16)
rotation = 1.5708
texture = ExtResource("6_iqjed")

[node name="ThrusterIndicator5" type="Sprite2D" parent="Spaceship"]
visible = false
position = Vector2(-36, 12)
rotation = 3.14159
texture = ExtResource("6_iqjed")

[node name="ThrusterIndicator6" type="Sprite2D" parent="Spaceship"]
visible = false
position = Vector2(-36, -12)
rotation = 3.14159
texture = ExtResource("6_iqjed")

[node name="ThrusterIndicator7" type="Sprite2D" parent="Spaceship"]
visible = false
position = Vector2(-32, -16)
rotation = -1.5708
texture = ExtResource("6_iqjed")

[node name="Indicators" type="Node2D" parent="."]
position = Vector2(544, 278)
script = ExtResource("5_28ovd")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Spaceship" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 11.0
offset_top = 540.0
offset_right = 93.0
offset_bottom = 617.0

[node name="Label" type="Label" parent="CanvasLayer/Spaceship"]
layout_mode = 2
text = "Spaceship:"

[node name="VelocityLabel" type="Label" parent="CanvasLayer/Spaceship"]
layout_mode = 2

[node name="OrientationLabel" type="Label" parent="CanvasLayer/Spaceship"]
layout_mode = 2

[node name="Stabilization" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 200.0
offset_top = 540.0
offset_right = 300.0
offset_bottom = 644.0

[node name="Label" type="Label" parent="CanvasLayer/Stabilization"]
layout_mode = 2
text = "Autopilot:"

[node name="VelocityLabel" type="Label" parent="CanvasLayer/Stabilization"]
layout_mode = 2

[node name="OrientationLabel" type="Label" parent="CanvasLayer/Stabilization"]
layout_mode = 2

[node name="EnabledLabel" type="Label" parent="CanvasLayer/Stabilization"]
layout_mode = 2
